[package]
name = "athena_rust_api"
version = "0.0.1"
authors = ["dev <dev@coinexchain.org>"]
license = "BSD-2-Clause"
repository = "https://github.com/coinexchain/athena-rust-api"
description = "CoinEx Athena API for Rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
